@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    - Replace MakeMaker with OverridableMakeMaker
+
 0.07 2010-03-12 22:37:51
 
     - Correctly declare dependencies for this module
